fixed portfolio item height on mobile screen

--- a/src/components/portfolio/portfolioItem/portfolioItem.scss
+++ b/src/components/portfolio/portfolioItem/portfolioItem.scss
@@ -123,10 +123,11 @@
 
 @media (max-width: 600px) {
     .portfolioItem{
+        height: calc(100vh - 120px);
         .container{
             .wrapper{
                 gap: 10px;
-                padding: 110px 10% 0 10%;
+                padding: 30px 10% 0 10%;
         
                 .textContainer{
                     gap: 10px;
